Remove call to stopLoading when loading Distilled version.

Stop loading destroys the pending entry which leads to a crash in release.
Remove the call to stop.

BUG=679721

Review-Url: https://codereview.chromium.org/2623583005
Cr-Commit-Position: refs/heads/master@{#442856}

Former-commit-id: e5a88e66c2120ec14fe98ec23da580300064dbbf